2013-12-02 Sterling Augustine  <saugustine@google.com>

	* dwarf2out.c (output_pubnames): Use comp_unit_die ()->die_offset
	when there isn't a skeleton die.

2013-12-02  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/59353
	* doc/invoke.texi: Document -fsanitize=return.

2013-12-02  Tobias Burnus  <burnus@net-b.de>
	    Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR middle-end/59257
	* doc/invoke.texi: Add missing @opindex.
	(-fsanitize=): Use @gcctabopt instead of @itemize.

2013-12-02  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	Fix C++0x memory model for unaligned fields in packed, aligned(4)
	structures with -fno-strict-volatile-bitfields on STRICT_ALIGNMENT
	targets like arm-none-eabi.
	* expr.c (expand_assignment): Handle normal fields like bit regions.

2013-12-02  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR target/58115
	* function.c (invoke_set_current_function_hook): Call
	targetm.set_current_function after setting this_fn_optabs.

2013-12-02  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/59139
	* tree-ssa-loop-niter.c (chain_of_csts_start): Properly match
	code in get_val_for.
	(get_val_for): Use gcc_checking_asserts.

2013-12-02  Richard Biener  <rguenther@suse.de>

	PR middle-end/59199
	* tree-ssa-operands.c (opf_implicit): Remove.
	(opf_address_taken): New flag.
	(get_expr_operands): Remove early out, pass down
	opf_address_taken for ADDR_EXPRs, add a use operand only
	for non-opf_address_taken bases.
	(get_indirect_ref_operands): Rename to ...
	(get_mem_ref_operands): ... this.
	(get_asm_expr_operands): Rename to ...
	(get_asm_stmt_operands): ... this.

2013-12-02  Yuri Rumyantsev  <ysrumyan@gmail.com>

	* ipa-inline.c (check_callers): Add missed pointer de-reference.

2013-12-02  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/59356
	* tree-dfa.h (get_addr_base_and_unit_offset_1) <case ARRAY_REF>: Do the
	offset computation using the precision of the index type.

2013-12-02  Yvan Roux  <yvan.roux@linaro.org>
